# anime-recommendation-app

./: .gitignore  Makefile  README.md  dvc.yaml  kaggle.json  main.py  params.yaml  pyproject.toml  render.yaml  requirements.txt
.dvc/: config
.github/workflows/: ci.yaml
anime_recommendation_app/: __init__.py  data_cleaning.py  data_loading.py  data_preprocessing.py  feature_engineering.py  helper.py
anime_recommendation_app/modeling/: model.py  model_evaluation.py  model_training.py
docs/: mkdocs.yml
docs/docs/: index.md
experiments/: recommender_experiment.py
mlruns/0/: meta.yaml
mlruns/949842723656990069/: meta.yaml
mlruns/949842723656990069/5fe4a76678e741a79c579747ab335887/: meta.yaml
mlruns/949842723656990069/5fe4a76678e741a79c579747ab335887/tags/: mlflow.runName  mlflow.source.name
models/: .gitignore
models/artifacts/: .gitignore  anime_encoded_to_anime.json
notebooks/: check_dataset.ipynb
