[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "anime_recommendation_app"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Frendy" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["anime_recommendation_app"]
include = ["pyproject.toml", "anime_recommendation_app/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["anime_recommendation_app"]
force-sort-within-sections = true

